--- a/HelloDoc/Views/Shared/_Admin_Dash.cshtml
+++ b/HelloDoc/Views/Shared/_Admin_Dash.cshtml
@@ -8,21 +8,19 @@
 
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/HelloDoc.styles.css" asp-append-version="true" />
-    <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" asp-append-version="true" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" asp-append-version="true" />
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css" asp-append-version="true" />
+    <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
 </head>
 <body>
-
-    
     <header>
         <div class="container-fluid">
             <div class="row border border-bottom shadow">
                 <!-- -----------------nav--------------- -->
                 <div class="col col-12 d-flex mb-1 flex-row justify-content-between">
                     <div class="doct-logo">
-                        <img src="../images/doct-logo-2.png" alt="" style="height:5rem" />
+                        <img src="~/images/doct-logo-2.png" alt="" style="height:5rem" />
                     </div>
                     <div class=" float-end ">
                         <span class="fw-bold me-2"> Welcome:@ViewBag.username</span>
@@ -49,31 +47,30 @@
             <!-- Nav tabs -->
 
         </div>
-      <div class="ps-1 p-4 fs-5">
-            <ul class="nav nav-pills-info nav-underline  mb-1 shadow  ms-3" id="pills-tab" role="tablist">
-                <li class="nav-item " role="presentation">
-                    <a> <button class="nav-link text-info" id="pills-home-tab" data-bs-toggle="pill" data-bs-target="#pills-home" type="button" role="tab" aria-controls="pills-home" aria-selected="true">DashBoard</button></a>
+        <div class="w-100 shadow  px-2 px-md-5  pt-2  border-5 border-bottom-5 d-none d-sm-block pb-1  ">
+            <ul class="nav nav-tabs-info nav-underline   fs-4 " id="pills-tab" role="tablist">
+                <li class="nav-item text-info">
+                    <a class="nav-link  text-info @(ViewContext.ActionDescriptor.RouteValues["action"] == "Index" ? "active" : "")">Dashboard</a>
                 </li>
-                <li class="nav-item" role="presentation">
-                    <a>  <button class="nav-link text-info" id="pills-profile-tab" data-bs-toggle="pill" data-bs-target="#pills-profile" type="button" role="tab" aria-controls="pills-profile" aria-selected="false">Provider Location</button></a>
+                <li class="nav-item " >
+                    <a class="nav-link text-info @(ViewContext.ActionDescriptor.RouteValues["action"] == "ProviderLocation" ? "active" : "")">Provider Location</a>
                 </li>
-                <li class="nav-item" role="presentation">
-                    <button class="nav-link text-info" id="pills-contact-tab" data-bs-toggle="pill" data-bs-target="#pills-contact" type="button" role="tab" aria-controls="pills-contact" aria-selected="false">My Profile</button>
-                </li> 
-                <li class="nav-item" role="presentation">
-                    <button class="nav-link text-info" id="pills-contact-tab" data-bs-toggle="pill" data-bs-target="#pills-contact" type="button" role="tab" aria-controls="pills-contact" aria-selected="false">Provider</button>
+                <li class="nav-item">
+                    <a class="nav-link text-info @(ViewContext.ActionDescriptor.RouteValues["action"] == "Profile" ? "active" : "")">My Profile</a>
                 </li>
-                <li class="nav-item" role="presentation">
-                    <button class="nav-link text-info" id="pills-contact-tab" data-bs-toggle="pill" data-bs-target="#pills-contact" type="button" role="tab" aria-controls="pills-contact" aria-selected="false">Partner</button>
-                </li> 
-                <li class="nav-item" role="presentation">
-                    <button class="nav-link text-info" id="pills-contact-tab" data-bs-toggle="pill" data-bs-target="#pills-contact" type="button" role="tab" aria-controls="pills-contact" aria-selected="false">Access</button>
+                <li class="nav-item">
+                    <a class="nav-link text-info @(ViewContext.ActionDescriptor.RouteValues["action"] == "Provider" ? "active" : "")">Provider</a>
                 </li>
-                <li class="nav-item" role="presentation">
-                    <button class="nav-link text-info" id="pills-contact-tab" data-bs-toggle="pill" data-bs-target="#pills-contact" type="button" role="tab" aria-controls="pills-contact" aria-selected="false">Record</button>
+                <li class="nav-item">
+                    <a class="nav-link  text-info @(ViewContext.ActionDescriptor.RouteValues["action"] == "Parteners" ? "active" : "")">Parteners</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link text-info @(ViewContext.ActionDescriptor.RouteValues["action"] == "Records" ? "active" : "")">Records</a>
+                </li>
+
             </ul>
-      </div>
+
+        </div>
      
     </header>
     <div class="container-fluid ">
