--- a/HelloDoc/Views/Admin_Dash/Admin_TableNew.cshtml
+++ b/HelloDoc/Views/Admin_Dash/Admin_TableNew.cshtml
@@ -5,7 +5,7 @@
 @* ---------------table---------------------------- *@
 
 
-<table class="table text-center table-responsive-lg">
+<table class="table text-center table-responsive-lg" id="table">
    
     
    
@@ -397,6 +397,155 @@
     </tbody>
     
 </table>
+
+
+@* ---------------------------------------------------------- *@
+@*Accordion*@
+
+
+<div class="accordion mx-2 pb-3" id="accordionExample">
+    @{
+        int i = 0;
+    }
+    @foreach (var item in Model)
+    {
+        @if(item.status == 1)
+        {
+            <div class="accordion-item bg-info-subtle">
+                <button class=" accordion-header btn w-100 px-4 shadow-none" type="button" data-bs-toggle="collapse" data-bs-target="#collapse_@i" aria-expanded="false" aria-controls="collapseTwo">
+                    <div class="row w-100 pb-1">
+                        <div class="col-8 text-start my-1">
+                            <h5>@item.Name</h5>
+
+                            <p class="mt-4">@item.Address</p>
+                        </div>
+                        <div class="col-4 py-3 text-end">
+                            @if (item.requesttypeid == 1)
+                            {
+                                <h6 class="mb-3">
+                                    Patient
+
+                                    <svg height="15" width="15" viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg">
+                                        <circle fill="#5fbc61" r="45" cx="50" cy="50" stroke="grey" stroke-width="3" />
+                                    </svg>
+                                </h6>
+                            }
+                            @if (item.requesttypeid == 2)
+                            {
+                                <h6 class="mb-3">
+                                    Family/Friend
+
+                                    <svg height="15" width="15" viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg">
+                                        <circle fill="#ed9124" r="45" cx="50" cy="50" stroke="grey" stroke-width="3" />
+                                    </svg>
+                                </h6>
+                            }
+                            @if (item.requesttypeid == 3)
+                            {
+                                <h6 class="mb-3">
+                                    Concierge
+
+                                    <svg height="15" width="15" viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg">
+                                        <circle fill="#e26277" r="45" cx="50" cy="50" stroke="grey" stroke-width="3" />
+                                    </svg>
+                                </h6>
+                            }
+                            @if (item.requesttypeid == 4)
+                            {
+                                <h6 class="mb-3">
+                                    Business
+
+                                    <svg height="15" width="15" viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg">
+                                        <circle fill="#007fc6" r="45" cx="50" cy="50" stroke="grey" stroke-width="3" />
+                                    </svg>
+                                </h6>
+                            }
+
+                            <a class="btn rounded-4 btn-outline-info px-3">Map Location</a>
+                        </div>
+                    </div>
+                    <div class="text-start pb-3">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-clock text-info" viewBox="0 0 16 16">
+                            <path d="M8 3.5a.5.5 0 0 0-1 0V9a.5.5 0 0 0 .252.434l3.5 2a.5.5 0 0 0 .496-.868L8 8.71z" />
+                            <path d="M8 16A8 8 0 1 0 8 0a8 8 0 0 0 0 16m7-8A7 7 0 1 1 1 8a7 7 0 0 1 14 0" />
+                        </svg>
+                        <span>Wait Time : </span>
+                    </div>
+                </button>
+                <div id="collapse_@i" class="accordion-collapse collapse border-top border-secondary" data-bs-parent="#accordionExample">
+                    <div class="accordion-body">
+                        <h6 class="w-100">
+
+                            <button class="btn border-1 rounded-5 border-info pt-0 ">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-calendar-week" viewBox="0 0 16 16">
+                                    <path d="M11 6.5a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 .5.5v1a.5.5 0 0 1-.5.5h-1a.5.5 0 0 1-.5-.5zm-3 0a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 .5.5v1a.5.5 0 0 1-.5.5h-1a.5.5 0 0 1-.5-.5zm-5 3a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 .5.5v1a.5.5 0 0 1-.5.5h-1a.5.5 0 0 1-.5-.5zm3 0a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 .5.5v1a.5.5 0 0 1-.5.5h-1a.5.5 0 0 1-.5-.5z" />
+                                    <path d="M3.5 0a.5.5 0 0 1 .5.5V1h8V.5a.5.5 0 0 1 1 0V1h1a2 2 0 0 1 2 2v11a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V3a2 2 0 0 1 2-2h1V.5a.5.5 0 0 1 .5-.5M1 4v10a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1V4z" />
+                                </svg>
+                            </button>
+
+                            Date Of Birth: @item.BirthDate
+                        </h6>
+                        <h6 class="w-100">
+                            <button class="btn border-1 rounded-5 border-info pt-0">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-envelope" viewBox="0 0 16 16">
+                                    <path d="M0 4a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v8a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2zm2-1a1 1 0 0 0-1 1v.217l7 4.2 7-4.2V4a1 1 0 0 0-1-1zm13 2.383-4.708 2.825L15 11.105zm-.034 6.876-5.64-3.471L8 9.583l-1.326-.795-5.64 3.47A1 1 0 0 0 2 13h12a1 1 0 0 0 .966-.741M1 11.105l4.708-2.897L1 5.383z" />
+                                </svg>
+                            </button>
+
+                            Email: @item.Email
+                        </h6>
+                        <h6 class="w-100">
+                            <button class="btn border-1 rounded-5 border-info pt-0">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-telephone" viewBox="0 0 16 16">
+                                    <path d="M3.654 1.328a.678.678 0 0 0-1.015-.063L1.605 2.3c-.483.484-.661 1.169-.45 1.77a17.6 17.6 0 0 0 4.168 6.608 17.6 17.6 0 0 0 6.608 4.168c.601.211 1.286.033 1.77-.45l1.034-1.034a.678.678 0 0 0-.063-1.015l-2.307-1.794a.68.68 0 0 0-.58-.122l-2.19.547a1.75 1.75 0 0 1-1.657-.459L5.482 8.062a1.75 1.75 0 0 1-.46-1.657l.548-2.19a.68.68 0 0 0-.122-.58zM1.884.511a1.745 1.745 0 0 1 2.612.163L6.29 2.98c.329.423.445.974.315 1.494l-.547 2.19a.68.68 0 0 0 .178.643l2.457 2.457a.68.68 0 0 0 .644.178l2.189-.547a1.75 1.75 0 0 1 1.494.315l2.306 1.794c.829.645.905 1.87.163 2.611l-1.034 1.034c-.74.74-1.846 1.065-2.877.702a18.6 18.6 0 0 1-7.01-4.42 18.6 18.6 0 0 1-4.42-7.009c-.362-1.03-.037-2.137.703-2.877z" />
+                                </svg>
+                            </button>
+
+                            Patient: @item.PhoneNumber_P
+                        </h6>
+
+                        <h6 class="w-100">
+                            <button class="btn border-1 rounded-5 border-info pt-0">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-person" viewBox="0 0 16 16">
+                                    <path d="M8 8a3 3 0 1 0 0-6 3 3 0 0 0 0 6m2-3a2 2 0 1 1-4 0 2 2 0 0 1 4 0m4 8c0 1-1 1-1 1H3s-1 0-1-1 1-4 6-4 6 3 6 4m-1-.004c-.001-.246-.154-.986-.832-1.664C11.516 10.68 10.289 10 8 10s-3.516.68-4.168 1.332c-.678.678-.83 1.418-.832 1.664z" />
+                                </svg>
+                            </button>
+
+                            Requestor:
+                        </h6>
+
+                        <div class="row gy-2  py-3">
+                            <div class="col-6 px-3">
+                                <button class="border-1 btn-danger rounded-5 btn w-100 "> Assign Case</button>
+                            </div>
+                            <div class="col-6 px-3">
+                                <button class=" border-1 btn-danger px-3 rounded-5 btn w-100"> Cancel Case</button>
+
+                            </div>
+                            <div class="col-6 px-3">
+                                <button class=" border-1 btn-danger px-3 rounded-5 btn w-100"> View Notes</button>
+
+                            </div>
+                            <div class="col-6 px-3">
+                                <button class=" border-1 btn-danger px-3 rounded-5 btn w-100"> Block Patient</button>
+
+                            </div>
+                            <div class="col-6 px-3">
+                                <button class="border-1 btn-danger px-3 rounded-5 btn w-100"> Email</button>
+
+                            </div>
+                        </div>
+
+                    </div>
+                </div>
+            </div>
+            i++;
+        }
+    }
+
+</div>
+@* ---------------------------------------------------------- *@
+
 
 
 
