--- a/HelloDoc/Views/Admin_Dash/ViewCase.cshtml
+++ b/HelloDoc/Views/Admin_Dash/ViewCase.cshtml
@@ -150,10 +150,10 @@
 
                     <div class="d-flex justify-content-end my-1">
                         <button onclick="toggleEdit()" type="button" class="btn border-none bg-info p-2 text-light fw-semibold me-4" id="EditBtn">
-                            Edit
+                            Assign
                         </button>
                         <button onclick="toggleSave()" type="submit" class="btn border-none bg-info p-2 text-light fw-semibold me-4" id="SaveBtn">
-                            Save
+                            View Notes
                         </button>
                         <button onclick="toggleCancle()" class="btn border-none bg-danger p-2 text-light fw-semibold me-4" id="CancleBtn">
                             Cancle
