--- a/HelloDoc/Views/Admin_Dash/ViewCase.cshtml
+++ b/HelloDoc/Views/Admin_Dash/ViewCase.cshtml
@@ -16,7 +16,8 @@
             <h4 class="pt-3 mb-4">Patient Information</h4>
 
             <p>Confirmation Number</p>
-            <h4 class="mb-5 text-info"> MD1205223232323</h4>
+     
+            <h4 class="mb-5 text-info">@Model.ConfirmationNumber</h4>
 
             <form method="post" id="emailForm" enctype="multipart/form-data" asp-action="ViewCase">
                 <div class="row">
