--- a/HelloDoc/Views/DashBoard/ViewDocs.cshtml
+++ b/HelloDoc/Views/DashBoard/ViewDocs.cshtml
@@ -12,8 +12,9 @@
         </div>
         <div class="PatientInfoTable border rounded shadow bg-white p-4">
             <span> patient name</span>
-            <h3 class="text-info">@ViewBag.username</h3>
-
+            <h3 class="text-info">
+                @ViewBag.username <span class="fs-5 text-black">(@Model.confirmationnum)</span>
+            </h3>
             <span>Check here for any files that you or the doctors of your subsequents requestor have attached for you</span>
 
 
